Fix mobile spacing + add resume

--- a/global.css
+++ b/global.css
@@ -132,71 +132,6 @@
     @apply animate-pulse;
 } */
 
-#cursor{
-    border-radius: 1000px;
-    width: 30px;
-    height: 30px;
-    border: 2px solid #daf8ee;
-    margin: -15px;
-    transition-duration: 150ms;
-    z-index: 10000;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-#pointer{
-    border-radius: 1000px;
-    width: 10px;
-    height: 10px;
-    border: 5px solid #dae358;
-    margin: -5px;
-    z-index: 10001;
-    padding: 0;
-    box-sizing: border-box;
-}
-.magnet{
-    border: 3px dotted red;
-    box-shadow: ... ;
-}
-@keyframes cursorClick{
-    from,to{
-        border: 3px solid  #daf8ee;
-        transform: scale(1);
-    }
-    60%{
-        border: 3px solid rgba(244, 67, 54, 0);
-        transform: scale(2);
-    }
-    70%{
-        border: 3px solid rgba(244, 67, 54, 0);
-        transform: scale(1.4);
-    }
-}
-/* 
-.dot {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 8px;
-	height: 8px;
-	background-color: #dae358;
-	border-radius: 100%;
-	transform: translate(-50%, -50%);
-	z-index: 999;
-	pointer-events: none;
-}
-
-.myring.hovered {
-	width: 50px;
-	height: 50px;
-	border-width: 3px;
-	border-color: lightgray;
-}
-
-.dot.hovered {
-	display: none;
-} */
-
 *::selection {
 	background-color: #dae358;
 	color: #195555;
@@ -213,6 +148,30 @@
 	.md\:rot {
 		transform: rotate(-90deg);
 		transform-origin: left top;
+	}
+}
+@media screen and (min-width: 800px) {
+	#cursor {
+		border-radius: 1000px;
+		width: 30px;
+		height: 30px;
+		border: 2px solid #daf8ee;
+		margin: -15px;
+		transition-duration: 150ms;
+		z-index: 10000;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
+	#pointer {
+		border-radius: 1000px;
+		width: 10px;
+		height: 10px;
+		border: 5px solid #dae358;
+		margin: -5px;
+		z-index: 10001;
+		padding: 0;
+		box-sizing: border-box;
 	}
 }
 
@@ -245,5 +204,21 @@ html {
 
 	to {
 		-moz-transform: rotate(360deg);
+	}
+}
+
+@keyframes cursorClick {
+	from,
+	to {
+		border: 3px solid #daf8ee;
+		transform: scale(1);
+	}
+	60% {
+		border: 3px solid rgba(244, 67, 54, 0);
+		transform: scale(2);
+	}
+	70% {
+		border: 3px solid rgba(244, 67, 54, 0);
+		transform: scale(1.4);
 	}
 }
